--- a/conocimientos.css
+++ b/conocimientos.css
@@ -76,9 +76,9 @@ body    {
     font-size: 15px;
     font-weight: bolder;
 }
-.p-icono:hover  {
+/* .p-icono:hover  {
     color: yellow;
-}
+} */
 
 /* <section class="mis-conocimientos">
         <div class="div-mis-conocimientos">
