--- a/conocimientos.css
+++ b/conocimientos.css
@@ -76,6 +76,13 @@ body    {
     font-size: 15px;
     font-weight: bolder;
 }
+
+@media  (max-width: 320px) {
+    .titulo-mis-conocimientos, .p-mis-conocimientos {
+        display: flex;
+        justify-content: center;
+    }
+} 
 /* .p-icono:hover  {
     color: yellow;
 } */
