--- a/contactame.css
+++ b/contactame.css
@@ -7,68 +7,83 @@ body    {
     height: 100vh;
 }
  .contacto {
-    background-color: cadetblue;
+    background-color: #f6f7fb;
     padding: 30px;
+    box-shadow: -10px 0 20px rgba(0, 0, 0, 0.3);
  }
  .box-contacto  {
-    background-color: cornflowerblue;
+    background-color: white;
     display: flex;
     flex-direction: row;
     border-radius: 10px;
     margin: 40px;
-    padding: 50px;
+    padding: 30px;
  }
  .contactame {
-    background-color: crimson;
+    background-color: white;
     padding: 10px;
     display: flex;
     flex-direction: column;
     width: 50%;
     margin: 10px;
-    align-items: center;
+    
  }
  .h1contactame  {
     font-size: 40px;
     font-family: 'Montserrat', sans-serif;
-    padding: 20px;
+    padding: 5px;
  }
  .pcontactame    {
     font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
-    font-weight: 50;
+    font-size: 20px;
     width: 500px;
-    padding: 20px;
+    padding: 5px;
+    margin-top: 20px
+    ;
  }
 
  .contactame-box    {
     list-style: none;
     display: flex;
     flex-direction: column;
-    background-color: rebeccapurple;
-    align-items: center;
+    margin-top: 40px;
  }
  .contactame-list   {
     display: flex;
     flex-direction: row;
-    margin: 10px
+    margin: 20px;
+
  }
  .contactame-link   {
     display: flex;
     flex-direction: row;
     text-decoration: none;
-    
+    color: black;
+ }
+ .contactame-link:hover  {
+    color: #f9a826; 
+ }
+ .twitter-contacto, .github-contacto, .linkedin-contacto, .mail-contacto    {
+    font-size: 30px;
+    color:#f9a826 ;
+ }
+ .h3-icono  {
+    font-family: 'Montserrat', sans-serif;
+    margin-left: 10px;
+    font-size: 1.2em;
+    font-weight: 100;
  }
 /* formulario style */
 
 .h1-contactame  {
     font-size: 40px;
     font-family: 'Montserrat', sans-serif;
-    padding: 20px;
-    text-align: center; 
+    padding: 5px;
+     
 }
 
 .formulario    {
-    background-color: palevioletred;
+    background-color: white;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -90,17 +105,17 @@ body    {
 .div-label {
     margin: 5px;
     padding: 5px;
-    text-align: center;
+    
 }
 
 input   {
-    width: 50%;
+    width: 100%;
     height: 30px;
     border-radius: 15px;
     outline: none;
-    text-align: center;
+    padding: 5px;
     display: flex;
-    align-items: center;
+    
 }
 textarea    {
     width: 100%;
@@ -108,6 +123,35 @@ textarea    {
     border-radius: 15px;
     outline: none;
 }
+
+.button-form {
+    border-radius: 20px;
+    border-style: none;
+    width: 100px;
+    padding: 5px ;
+    margin-top: 10px;
+    list-style: none;
+    background-color: #f9a826;
+    outline: none;
+}
+.button-form:hover  {
+    box-shadow: 5px 5px 5px  black;
+    border-radius: 20px;
+    
+}
+.button-text    {
+    font-family:'Montserrat', sans-serif ;
+    font-size: 20px;
+    color: white;   
+}
+
+@media (max-width: 580px) {
+    .box-contacto   {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 
 /* <section class="contacto">
         <div class="box-contacto">
