--- a/header.css
+++ b/header.css
@@ -7,14 +7,15 @@ body    {
     height: 100vh;
 }
 
+
 header  {
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    /* align-items: flex-end; */
     padding: 25px;
     width: 100%;
-    background-color: #f6f7fb;
-    position: fixed;
+    /* background-color: #f6f7fb; */
+    background-color: #f9a826;
     
 }
 .nav-header {
