--- a/conocimientos.css
+++ b/conocimientos.css
@@ -7,13 +7,17 @@ body    {
     height: 100vh;
 }
 .mis-conocimientos  {
+    overflow: hidden;
+    box-shadow: -10px 0 20px rgba(0, 0, 0, 0.3);
+    width: 100%;
+}
+.conocimientos-container    {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    box-shadow: -10px 0 20px rgba(0, 0, 0, 0.3);
     background-color: #f6f7fb;
-    padding: 70px;
+    padding: 70px;   
 }
 .div-mis-conocimientos   {
     display: flex;
@@ -24,6 +28,7 @@ body    {
 .titulo-mis-conocimientos   {
     font-family: 'Montserrat', sans-serif;
     font-size: 45px;
+    display: flex;
 }
 .p-mis-conocimientos    {
     font-family: 'Montserrat', sans-serif;
@@ -81,6 +86,7 @@ body    {
     .titulo-mis-conocimientos, .p-mis-conocimientos {
         display: flex;
         justify-content: center;
+        font-size: 15px;
     }
 } 
 /* .p-icono:hover  {
