--- a/contactame.css
+++ b/contactame.css
@@ -10,6 +10,7 @@ body    {
     background-color: #f6f7fb;
     padding: 30px;
     box-shadow: -10px 0 20px rgba(0, 0, 0, 0.3);
+    width: 100%;
  }
  .box-contacto  {
     background-color: white;
@@ -147,10 +148,39 @@ textarea    {
     color: white;   
 }
 
-@media (max-width: 580px) {
+@media (max-width: 320px)  {
     .box-contacto   {
         display: flex;
         flex-direction: column;
+        align-content: flex-start;
+        margin: 0px;
+        padding: 0px;
+    }
+    .h1-contactame, .h1contactame  {
+        display: flex;
+        font-size: 20px;
+    }
+    .pcontactame    {
+        display: flex;
+        width: 200%;
+        font-size: 10px;
+    }
+    .h3-icono   {
+        display: flex;
+        text-align: start;
+        font-size: 0.5em;
+    }
+    .twitter-contacto, .github-contacto, .linkedin-contacto, .mail-contacto {
+        font-size: 15px;
+    }
+    .contactame-list    {
+        margin: 10px;
+    }
+    .li-form    {
+        font-size: 15px;
+    }
+    input {
+        width: 200%;
     }
 }
 
