--- a/quote.css
+++ b/quote.css
@@ -8,6 +8,7 @@ body    {
 }
 .quote  {
     background-color: #f9a826;
+    width: 100%;
 }
 .blockquote {
     display: flex;
@@ -27,8 +28,7 @@ body    {
 .pquote {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
-    padding: 10px;
-    
+    padding: 10px;  
     display: flex;
     justify-content: center;
 }
