--- a/contactame.css
+++ b/contactame.css
@@ -148,7 +148,7 @@ textarea    {
     color: white;   
 }
 
-@media (max-width: 900px)  {
+@media (min-width:320px) and (max-width:900px)  {
     .box-contacto   {
         display: flex;
         flex-direction: column;
