--- a/footer.css
+++ b/footer.css
@@ -73,7 +73,7 @@ span    {
     color: #f9a826;
 }
 
-@media (max-width: 900px)   {
+@media (min-width:320px) and (max-width:900px)   {
     .nav-footer {
         display: none;
     }
