--- a/header.css
+++ b/header.css
@@ -76,7 +76,7 @@ header  {
 
 /* boton menu */
 
-@media (max-width: 900px) {
+@media (min-width:320px) and (max-width:900px) {
     .div-header {
         display: none;
     }
