--- a/proyectos.css
+++ b/proyectos.css
@@ -70,11 +70,11 @@ body  {
     padding: 15px;
 }
 
-@media (max-width:320px)    {
+@media (min-width:320px) and (max-width:900px)  {
     .pmisproyectos  {
         display: flex;
         flex-shrink: inherit;
-        width: 100%;
+        width: 75%;
     }
 }
     
